--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     position: relative;
     color: #fff;
@@ -18,12 +17,12 @@ body::before {
     background-image: url(../images/background.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-size:contain;
-    filter: blur(40px); 
-    z-index: -1; 
+    background-size: contain;
+    filter: blur(40px);
+    z-index: -1;
 }
 
-body > * {
+body>* {
     position: relative;
     z-index: 1;
 }
@@ -152,7 +151,7 @@ body > * {
     z-index: 2;
 }
 
-.home_main_section:after {
+/* .home_main_section:after {
     content: "";
     display: block;
     width: 584.851px;
@@ -167,7 +166,7 @@ body > * {
     left: 50%;
     top: 100px;
     transform: translateX(-50%);
-}
+} */
 
 .home_container {
     overflow: hidden;
@@ -246,12 +245,14 @@ body > * {
     position: relative;
     z-index: 3;
 }
+
 .adjust_content {
     width: 100%;
     max-width: 1720px;
     margin: auto;
     padding: 0px 20px;
 }
+
 .header_inner {
     width: 100%;
     padding: 20px 0px;
@@ -272,6 +273,7 @@ body > * {
 .logo a svg {
     display: block;
 }
+
 .header_info {
     display: flex;
     align-items: center;
@@ -348,10 +350,12 @@ h1,
     font-size: 1.5em;
     transition: all 0.2s ease;
 }
+
 .dir_info .custom_buttom {
     display: block;
     width: 100%;
 }
+
 .dropdown_custome_menu {
     border-color: var(--border_color);
     background-color: #010412;
@@ -377,8 +381,16 @@ h1,
     max-height: 16px;
     display: block;
 }
+
 .dropdown-item:focus,
 .dropdown-item:hover {
     background: radial-gradient(163.75% 163.75% at 23.45% 140%, #0025CE 0%, rgba(9, 93, 230, 0.53) 100%);
     color: #fff;
+}
+
+@media screen and (max-width: 767px) {
+    .home_content_container_main {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
